@@ -52,11 +52,6 @@
 #include <rtems/asm.h>
 #include <rtems/powerpc/registers.h>
 
-#warning Call to boot_card has changed and needs checking.
-#warning The call is "void boot_card(const char* cmdline);"
-#warning You need to pass a NULL.
-#warning Please check and remove these warnings.
-
 /*
  *  The initial stack is set to the top of the internal RAM.
  *
